...
            name: 'Photography Session',
            category: 'Creative',
            description: 'Professional photography for events',
            price: 500
        },
        bookingDate: new Date('2024-10-10').toISOString(),
        status: 'Cancelled',
        payment: {
            status: 'Refunded',
            amount: 500
        }
    },
    {
...
          
      <View className="m-4">
        <View className="flex-row items-center space-x-2">
          <TouchableOpacity onPress={() => router.back()} className="py-4">
            <ArrowLeftIcon size={30} color='white' />
          </TouchableOpacity>
          <Text className="text-3xl font-dsbold text-purple-500">Your Bookings</Text>
        </View>
      </View>
      

      <FlatList
        data={bookings}
...
